--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ DB_USER=root
 DB_PASSWORD=
 DB_NAME=civicsense
 
-SMTP_HOST="smtp.gmail.com"
-SMTP_PORT=465
+SMTP_HOST="smtp.uniba.it"
+SMTP_PORT=25
 SMTP_MAILER="smtp"
-SMTP_USERNAME="civicsense18@gmail.com"
-SMTP_PASSWORD="c1v1csense2019"
+SMTP_USERNAME="f.greco66@studenti.uniba.it"
+SMTP_PASSWORD="@MJking97"
 
