--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ DB_NAME=civicsense
 SMTP_HOST="smtp.uniba.it"
 SMTP_PORT=25
 SMTP_MAILER="smtp"
-SMTP_USERNAME="f.greco66@studenti.uniba.it"
-SMTP_PASSWORD="@MJking97"
+SMTP_USERNAME="prova@studenti.uniba.it"
+SMTP_PASSWORD="prova"
 
