added session chiphering method to .env

--- a/.env
+++ b/.env
@@ -9,3 +9,8 @@ SMTP_MAILER="smtp"
 SMTP_USERNAME="prova@studenti.uniba.it"
 SMTP_PASSWORD="prova"
 
+CIPHERING = "AES-128-CTR"
+CIPH_OPTIONS = 0
+INIT_VECTOR_ENCRYPTION = "cH!swe!retReGu7W"
+SESSION_HASH = "sha512"
+
