updated component diagrams
updated .env

updated DB Folder

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,14 @@ DB_HOST=
 DB_USER=
 DB_PASSWORD=
 DB_NAME=
+
+SMTP_HOST=
+SMTP_PORT=
+SMTP_MAILER=
+SMTP_USERNAME=
+SMTP_PASSWORD=
+
+CIPHERING = 
+CIPH_OPTIONS = 
+INIT_VECTOR_ENCRYPTION = 
+SESSION_HASH = 
